# DigIlit-

./: .replit  README.md  design_guidelines.md  fix-project.sh  fix-spa-routing.sh  forensic-analysis.sh  package.json.backup  readme.md  tailwind.config.cjs  tailwind.config.ts  vite.config.ts  yarn-automation.sh
attached_assets/: DigLitLanding_1761334061879.tsx  Pasted-Business-Corporate-Strategy-Program-Project-Portfolio-Management-PMO-Business-Process-Optim-1761334536791_1761334536795.txt
attached_assets/DigIlit/: README.md  e --show-toplevel  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project_snapshot.txt  project_structure.txt  turbo.json
attached_assets/DigIlit/python/: README.md  pyproject.toml  ruff.toml
attached_assets/DigIlit/python/src/diglit_api/: __init__.py  cli.py  client.py
attached_assets/DigIlit/python/tests/: test_client.py
attached_assets/DigIlit/web/: diagnose-build.sh  next-seo.config.ts  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
client/: index.html  tailwind.config.cjs  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AtomToStar.tsx  Navigation.tsx  ThirteenPointSeal.tsx
client/src/lib/: icons.tsx
client/src/pages/: Home.tsx  Home.tsx.bak  (+4 more)
docs/: AI_CORE_ENGINE.txt  AUTOMATION_GUIDE.md  BACKEND_ARCHITECTURE.txt  BUSINESS_ANALYTICS.txt  EXECUTOR.md  ROADMAP.txt  VISUAL_ENGINE.txt
docs/design-system/: README.md  index.ts
server/: index.ts  routes.ts  storage.ts
shared/: products-data.json  schema.ts  services-data.json  solutions-data.json
(+80 files in other folders)
